Thu Jul 17 06:09:48 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (get_cwd_fd): support for platforms which has fchdir but no
	  openat.

Thu Jul 17 04:19:33 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (thread_start_func_2): wake up joining threads.

	* thread.c (sleep_forever, sleep_timeval): return when interrupted.
	  [ruby-dev:35542]

	* thread.c (timer_thread_function): restore main thread status.
	  [ruby-core:17270]

Thu Jul 17 01:27:38 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* io.c (appendline): remove invalid access.

Wed Jul 16 18:04:34 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* signal.c (signal_exec, trap_handler): trap accepts a string as
	  command.  [ruby-dev:35533]

Wed Jul 16 00:04:30 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/envutil.rb (Test::Unit::Assertions#assert_in_out_err): new
	  method.

	* test/ruby/test_argf.rb: use assert_in_out_err instead of
	  EnvUtil.rubyexec.

	* test/ruby/test_module.rb: ditto.

	* test/ruby/test_require.rb: ditto.

	* test/ruby/test_objectspace.rb: ditto.

	* test/ruby/test_object.rb: ditto.

	* test/ruby/test_string.rb: ditto.

	* test/ruby/test_method.rb: ditto.

	* test/ruby/test_variable.rb: ditto.

	* test/ruby/test_io.rb: ditto.

	* test/ruby/test_rubyoptions.rb: ditto.

	* test/ruby/test_exception.rb: ditto.

	* test/ruby/test_class.rb: ditto.

	* test/ruby/test_thread.rb: ditto.

Tue Jul 15 22:34:03 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (ruby_version): follow changes in configure.in.

Tue Jul 15 21:58:20 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/{,tkutil/}extconf.rb: ruby/ruby.h no longer needs to be
	  checked.

	* ext/tk/{tcltklib.c,tkutil/tkutil.c}: check macros for each headers.

Tue Jul 15 21:45:41 2008  Akinori MUSHA  <knu@iDaemons.org>

	* ext/tk/extconf.rb, ext/tk/tcltklib.c, ext/tk/tkutil/tkutil.c: Do
	  not test ruby/ruby.h, which makes OS X's gcc pick the wrong
	  header file from Ruby.framework.
